Correction bug sécurité